project('aslp-lifter', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++20'])

incdir = 'include'
srcdir = 'src'
install_srcdir = get_option('datadir') / 'aslp'

install_subdir(incdir, install_dir : get_option('includedir'), strip_directory : true)
gen_dep = declare_dependency(include_directories : incdir)

srcfiles = [
  'src/generated/./A64_decoder.cpp',
  'src/generated/./aarch64_vector_transfer_vector_table.cpp',
  'src/generated/./aarch64_vector_transfer_vector_permute_zip.cpp',
  'src/generated/./aarch64_vector_transfer_vector_permute_unzip.cpp',
  'src/generated/./aarch64_vector_transfer_vector_permute_transpose.cpp',
  'src/generated/./aarch64_vector_transfer_vector_insert.cpp',
  'src/generated/./aarch64_vector_transfer_vector_extract.cpp',
  'src/generated/./aarch64_vector_transfer_vector_cpy_dup_sisd.cpp',
  'src/generated/./aarch64_vector_transfer_vector_cpy_dup_simd.cpp',
  'src/generated/./aarch64_vector_transfer_integer_move_unsigned.cpp',
  'src/generated/./aarch64_vector_transfer_integer_move_signed.cpp',
  'src/generated/./aarch64_vector_transfer_integer_insert.cpp',
  'src/generated/./aarch64_vector_transfer_integer_dup.cpp',
  'src/generated/./aarch64_vector_shift_right_sisd.cpp',
  'src/generated/./aarch64_vector_shift_right_simd.cpp',
  'src/generated/./aarch64_vector_shift_right_narrow_uniform_sisd.cpp',
  'src/generated/./aarch64_vector_shift_right_narrow_uniform_simd.cpp',
  'src/generated/./aarch64_vector_shift_right_narrow_nonuniform_sisd.cpp',
  'src/generated/./aarch64_vector_shift_right_narrow_nonuniform_simd.cpp',
  'src/generated/./aarch64_vector_shift_right_narrow_logical.cpp',
  'src/generated/./aarch64_vector_shift_right_insert_sisd.cpp',
  'src/generated/./aarch64_vector_shift_right_insert_simd.cpp',
  'src/generated/./aarch64_vector_shift_left_sisd.cpp',
  'src/generated/./aarch64_vector_shift_left_simd.cpp',
  'src/generated/./aarch64_vector_shift_left_sat_sisd.cpp',
  'src/generated/./aarch64_vector_shift_left_sat_simd.cpp',
  'src/generated/./aarch64_vector_shift_left_long.cpp',
  'src/generated/./aarch64_vector_shift_left_insert_sisd.cpp',
  'src/generated/./aarch64_vector_shift_left_insert_simd.cpp',
  'src/generated/./aarch64_vector_shift_conv_int_sisd.cpp',
  'src/generated/./aarch64_vector_shift_conv_int_simd.cpp',
  'src/generated/./aarch64_vector_shift_conv_float_sisd.cpp',
  'src/generated/./aarch64_vector_shift_conv_float_simd.cpp',
  'src/generated/./aarch64_vector_reduce_int_max.cpp',
  'src/generated/./aarch64_vector_reduce_fp_maxnm_sisd.cpp',
  'src/generated/./aarch64_vector_reduce_fp_maxnm_simd.cpp',
  'src/generated/./aarch64_vector_reduce_fp_max_sisd.cpp',
  'src/generated/./aarch64_vector_reduce_fp_max_simd.cpp',
  'src/generated/./aarch64_vector_reduce_fp_add_sisd.cpp',
  'src/generated/./aarch64_vector_reduce_fp16_maxnm_sisd.cpp',
  'src/generated/./aarch64_vector_reduce_fp16_maxnm_simd.cpp',
  'src/generated/./aarch64_vector_reduce_fp16_max_sisd.cpp',
  'src/generated/./aarch64_vector_reduce_fp16_max_simd.cpp',
  'src/generated/./aarch64_vector_reduce_fp16_add_sisd.cpp',
  'src/generated/./aarch64_vector_reduce_add_sisd.cpp',
  'src/generated/./aarch64_vector_reduce_add_simd.cpp',
  'src/generated/./aarch64_vector_reduce_add_long.cpp',
  'src/generated/./aarch64_vector_logical.cpp',
  'src/generated/./aarch64_vector_fp16_movi.cpp',
  'src/generated/./aarch64_vector_cvt_bf16_vector.cpp',
  'src/generated/./aarch64_vector_cvt_bf16_scalar.cpp',
  'src/generated/./aarch64_vector_crypto_sm4_sm4enckey.cpp',
  'src/generated/./aarch64_vector_crypto_sm4_sm4enc.cpp',
  'src/generated/./aarch64_vector_crypto_sm3_sm3tt2b.cpp',
  'src/generated/./aarch64_vector_crypto_sm3_sm3tt2a.cpp',
  'src/generated/./aarch64_vector_crypto_sm3_sm3tt1b.cpp',
  'src/generated/./aarch64_vector_crypto_sm3_sm3tt1a.cpp',
  'src/generated/./aarch64_vector_crypto_sm3_sm3ss1.cpp',
  'src/generated/./aarch64_vector_crypto_sm3_sm3partw2.cpp',
  'src/generated/./aarch64_vector_crypto_sm3_sm3partw1.cpp',
  'src/generated/./aarch64_vector_crypto_sha512_sha512su1.cpp',
  'src/generated/./aarch64_vector_crypto_sha512_sha512su0.cpp',
  'src/generated/./aarch64_vector_crypto_sha512_sha512h2.cpp',
  'src/generated/./aarch64_vector_crypto_sha512_sha512h.cpp',
  'src/generated/./aarch64_vector_crypto_sha3op_sha256_sched1.cpp',
  'src/generated/./aarch64_vector_crypto_sha3op_sha256_hash.cpp',
  'src/generated/./aarch64_vector_crypto_sha3op_sha1_sched0.cpp',
  'src/generated/./aarch64_vector_crypto_sha3op_sha1_hash_parity.cpp',
  'src/generated/./aarch64_vector_crypto_sha3op_sha1_hash_majority.cpp',
  'src/generated/./aarch64_vector_crypto_sha3op_sha1_hash_choose.cpp',
  'src/generated/./aarch64_vector_crypto_sha3_xar.cpp',
  'src/generated/./aarch64_vector_crypto_sha3_rax1.cpp',
  'src/generated/./aarch64_vector_crypto_sha3_eor3.cpp',
  'src/generated/./aarch64_vector_crypto_sha3_bcax.cpp',
  'src/generated/./aarch64_vector_crypto_sha2op_sha256_sched0.cpp',
  'src/generated/./aarch64_vector_crypto_sha2op_sha1_sched1.cpp',
  'src/generated/./aarch64_vector_crypto_sha2op_sha1_hash.cpp',
  'src/generated/./aarch64_vector_crypto_aes_round.cpp',
  'src/generated/./aarch64_vector_crypto_aes_mix.cpp',
  'src/generated/./aarch64_vector_bfmmla.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_sqrt_fp16.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_sqrt_est_int.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_sqrt_est_fp16_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_sqrt_est_fp16_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_sqrt_est_float_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_sqrt_est_float_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_sqrt.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_recip_int.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_recip_fp16_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_recip_fp16_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_recip_float_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_recip_float_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_frecpx_fp16.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_special_frecpx.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_shift.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_rev.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_rbit.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_not.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_fp16_round.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_fp16_conv_int_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_fp16_conv_int_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_fp16_conv_float_tieaway_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_fp16_conv_float_tieaway_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_fp16_conv_float_bulk_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_fp16_conv_float_bulk_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_xtn_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_xtn_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_widen.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_round_frint_32_64.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_round.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_narrow.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_conv_int_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_conv_int_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_conv_float_tieaway_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_conv_float_tieaway_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_conv_float_bulk_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_float_conv_float_bulk_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_extract_sqxtun_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_extract_sqxtun_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_extract_sat_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_extract_sat_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_extract_nosat.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_diff_neg_sat_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_diff_neg_sat_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_diff_neg_int_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_diff_neg_int_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_diff_neg_fp16.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_diff_neg_float.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cnt.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_int_lessthan_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_int_lessthan_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_int_bulk_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_int_bulk_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_fp16_lessthan_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_fp16_lessthan_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_fp16_bulk_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_fp16_bulk_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_float_lessthan_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_float_lessthan_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_float_bulk_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_cmp_float_bulk_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_clsz.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_add_saturating_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_add_saturating_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_unary_add_pairwise.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_sub_saturating_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_sub_saturating_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_sub_int.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_sub_fp_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_sub_fp_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_sub_fp16_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_sub_fp16_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_shift_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_shift_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_rsqrts_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_rsqrts_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_rsqrts_fp16_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_rsqrts_fp16_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_recps_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_recps_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_recps_fp16_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_recps_fp16_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_int_product.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_int_doubling_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_int_doubling_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_int_doubling_accum_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_int_doubling_accum_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_int_dotp.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_int_bfdot.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_int_accum.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp_product.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp_mul_norounding_upper.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp_mul_norounding_lower.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp_fused.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp_extended_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp_extended_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp_complex.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp16_product.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp16_fused.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp16_extended_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_fp16_extended_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mul_acc_bf16_long.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_max_min_single.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_max_min_pair.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_max_min_fp_2008.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_max_min_fp_1985.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_max_min_fp16_2008.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_max_min_fp16_1985.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mat_mul_int_usdot.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_mat_mul_int_mla.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_logical_bsl_eor.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_logical_and_orr.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_div_fp16.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_div.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_diff.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_cmp_int_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_cmp_int_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_cmp_fp_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_cmp_fp_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_cmp_fp16_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_cmp_fp16_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_cmp_bitwise_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_cmp_bitwise_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_add_wrapping_single_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_add_wrapping_single_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_add_wrapping_pair.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_add_saturating_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_add_saturating_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_add_halving_truncating.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_add_halving_rounding.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_add_fp_complex.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_add_fp16.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_uniform_add_fp.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_long.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_int.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_high_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_high_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_fp_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_fp_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_fp16_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_fp16_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_double_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_double_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_mul_norounding_i_upper.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_mul_norounding_i_lower.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_long.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_int.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_high_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_high_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_fp_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_fp_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_fp16_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_fp16_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_double_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_double_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_complex.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mul_acc_bf16_long.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_mat_mul_int_dotp.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_dotp.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_element_bfdot.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_mul_product.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_mul_poly.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_mul_double_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_mul_double_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_mul_dmacc_sisd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_mul_dmacc_simd.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_mul_accum.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_diff.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_add_sub_wide.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_add_sub_narrow.cpp',
  'src/generated/./aarch64_vector_arithmetic_binary_disparate_add_sub_long.cpp',
  'src/generated/./aarch64_udf.cpp',
  'src/generated/./aarch64_system_sysops.cpp',
  'src/generated/./aarch64_system_register_cpsr.cpp',
  'src/generated/./aarch64_system_monitors.cpp',
  'src/generated/./aarch64_system_exceptions_runtime_hvc.cpp',
  'src/generated/./aarch64_system_exceptions_debug_halt.cpp',
  'src/generated/./aarch64_system_exceptions_debug_breakpoint.cpp',
  'src/generated/./aarch64_system_barriers_ssbb.cpp',
  'src/generated/./aarch64_system_barriers_sb.cpp',
  'src/generated/./aarch64_system_barriers_pssbb.cpp',
  'src/generated/./aarch64_system_barriers_isb.cpp',
  'src/generated/./aarch64_system_barriers_dsb.cpp',
  'src/generated/./aarch64_system_barriers_dmb.cpp',
  'src/generated/./aarch64_memory_vector_single_post_inc.cpp',
  'src/generated/./aarch64_memory_vector_single_no_wb.cpp',
  'src/generated/./aarch64_memory_vector_multiple_post_inc.cpp',
  'src/generated/./aarch64_memory_vector_multiple_no_wb.cpp',
  'src/generated/./aarch64_memory_single_simdfp_register.cpp',
  'src/generated/./aarch64_memory_single_simdfp_immediate_unsigned.cpp',
  'src/generated/./aarch64_memory_single_simdfp_immediate_signed_pre_idx.cpp',
  'src/generated/./aarch64_memory_single_simdfp_immediate_signed_post_idx.cpp',
  'src/generated/./aarch64_memory_single_simdfp_immediate_signed_offset_normal.cpp',
  'src/generated/./aarch64_memory_single_general_register.cpp',
  'src/generated/./aarch64_memory_single_general_immediate_unsigned.cpp',
  'src/generated/./aarch64_memory_single_general_immediate_signed_pre_idx.cpp',
  'src/generated/./aarch64_memory_single_general_immediate_signed_post_idx.cpp',
  'src/generated/./aarch64_memory_single_general_immediate_signed_pac.cpp',
  'src/generated/./aarch64_memory_single_general_immediate_signed_offset_unpriv.cpp',
  'src/generated/./aarch64_memory_single_general_immediate_signed_offset_normal.cpp',
  'src/generated/./aarch64_memory_single_general_immediate_signed_offset_lda_stl.cpp',
  'src/generated/./aarch64_memory_pair_simdfp_pre_idx.cpp',
  'src/generated/./aarch64_memory_pair_simdfp_post_idx.cpp',
  'src/generated/./aarch64_memory_pair_simdfp_offset.cpp',
  'src/generated/./aarch64_memory_pair_simdfp_no_alloc.cpp',
  'src/generated/./aarch64_memory_pair_general_pre_idx.cpp',
  'src/generated/./aarch64_memory_pair_general_post_idx.cpp',
  'src/generated/./aarch64_memory_pair_general_offset.cpp',
  'src/generated/./aarch64_memory_pair_general_no_alloc.cpp',
  'src/generated/./aarch64_memory_ordered_rcpc.cpp',
  'src/generated/./aarch64_memory_ordered.cpp',
  'src/generated/./aarch64_memory_literal_simdfp.cpp',
  'src/generated/./aarch64_memory_literal_general.cpp',
  'src/generated/./aarch64_memory_exclusive_single.cpp',
  'src/generated/./aarch64_memory_exclusive_pair.cpp',
  'src/generated/./aarch64_memory_atomicops_swp.cpp',
  'src/generated/./aarch64_memory_atomicops_ld.cpp',
  'src/generated/./aarch64_memory_atomicops_cas_single.cpp',
  'src/generated/./aarch64_memory_atomicops_cas_pair.cpp',
  'src/generated/./aarch64_integer_tags_mcsubtag.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagpre.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagpost.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagpairpre.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagpairpost.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagpairandzerodatapre.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagpairandzerodatapost.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagpairandzerodata.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagpair.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagarray.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagandzerodatapre.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagandzerodatapost.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagandzerodata.cpp',
  'src/generated/./aarch64_integer_tags_mcsettagandzeroarray.cpp',
  'src/generated/./aarch64_integer_tags_mcsettaganddatapairpre.cpp',
  'src/generated/./aarch64_integer_tags_mcsettaganddatapairpost.cpp',
  'src/generated/./aarch64_integer_tags_mcsettaganddatapair.cpp',
  'src/generated/./aarch64_integer_tags_mcsettag.cpp',
  'src/generated/./aarch64_integer_tags_mcinserttagmask.cpp',
  'src/generated/./aarch64_integer_tags_mcinsertrandomtag.cpp',
  'src/generated/./aarch64_integer_tags_mcgettagarray.cpp',
  'src/generated/./aarch64_integer_tags_mcgettag.cpp',
  'src/generated/./aarch64_integer_tags_mcaddtag.cpp',
  'src/generated/./aarch64_integer_shift_variable.cpp',
  'src/generated/./aarch64_integer_pac_strip_hint.cpp',
  'src/generated/./aarch64_integer_pac_pacib_hint.cpp',
  'src/generated/./aarch64_integer_pac_pacib_dp_1src.cpp',
  'src/generated/./aarch64_integer_pac_pacia_hint.cpp',
  'src/generated/./aarch64_integer_pac_pacia_dp_1src.cpp',
  'src/generated/./aarch64_integer_pac_pacdb_dp_1src.cpp',
  'src/generated/./aarch64_integer_pac_pacda_dp_1src.cpp',
  'src/generated/./aarch64_integer_pac_autib_hint.cpp',
  'src/generated/./aarch64_integer_pac_autib_dp_1src.cpp',
  'src/generated/./aarch64_integer_pac_autia_hint.cpp',
  'src/generated/./aarch64_integer_pac_autia_dp_1src.cpp',
  'src/generated/./aarch64_integer_pac_autdb_dp_1src.cpp',
  'src/generated/./aarch64_integer_pac_autda_dp_1src.cpp',
  'src/generated/./aarch64_integer_logical_shiftedreg.cpp',
  'src/generated/./aarch64_integer_logical_immediate.cpp',
  'src/generated/./aarch64_integer_ins_ext_insert_movewide.cpp',
  'src/generated/./aarch64_integer_ins_ext_extract_immediate.cpp',
  'src/generated/./aarch64_integer_flags_xaflag.cpp',
  'src/generated/./aarch64_integer_flags_setf.cpp',
  'src/generated/./aarch64_integer_flags_rmif.cpp',
  'src/generated/./aarch64_integer_flags_cfinv.cpp',
  'src/generated/./aarch64_integer_flags_axflag.cpp',
  'src/generated/./aarch64_integer_crc.cpp',
  'src/generated/./aarch64_integer_conditional_select.cpp',
  'src/generated/./aarch64_integer_conditional_compare_register.cpp',
  'src/generated/./aarch64_integer_conditional_compare_immediate.cpp',
  'src/generated/./aarch64_integer_bitfield.cpp',
  'src/generated/./aarch64_integer_arithmetic_rev.cpp',
  'src/generated/./aarch64_integer_arithmetic_rbit.cpp',
  'src/generated/./aarch64_integer_arithmetic_pointer_mcsubtracttaggedaddresssetflags.cpp',
  'src/generated/./aarch64_integer_arithmetic_pointer_mcsubtracttaggedaddress.cpp',
  'src/generated/./aarch64_integer_arithmetic_mul_widening_64_128hi.cpp',
  'src/generated/./aarch64_integer_arithmetic_mul_widening_32_64.cpp',
  'src/generated/./aarch64_integer_arithmetic_mul_uniform_add_sub.cpp',
  'src/generated/./aarch64_integer_arithmetic_div.cpp',
  'src/generated/./aarch64_integer_arithmetic_cnt.cpp',
  'src/generated/./aarch64_integer_arithmetic_address_pc_rel.cpp',
  'src/generated/./aarch64_integer_arithmetic_add_sub_shiftedreg.cpp',
  'src/generated/./aarch64_integer_arithmetic_add_sub_immediate.cpp',
  'src/generated/./aarch64_integer_arithmetic_add_sub_extendedreg.cpp',
  'src/generated/./aarch64_integer_arithmetic_add_sub_carry.cpp',
  'src/generated/./aarch64_float_move_fp_select.cpp',
  'src/generated/./aarch64_float_move_fp_imm.cpp',
  'src/generated/./aarch64_float_convert_int.cpp',
  'src/generated/./aarch64_float_convert_fp.cpp',
  'src/generated/./aarch64_float_convert_fix.cpp',
  'src/generated/./aarch64_float_compare_uncond.cpp',
  'src/generated/./aarch64_float_compare_cond.cpp',
  'src/generated/./aarch64_float_arithmetic_unary.cpp',
  'src/generated/./aarch64_float_arithmetic_round_frint_32_64.cpp',
  'src/generated/./aarch64_float_arithmetic_round_frint.cpp',
  'src/generated/./aarch64_float_arithmetic_mul_product.cpp',
  'src/generated/./aarch64_float_arithmetic_mul_add_sub.cpp',
  'src/generated/./aarch64_float_arithmetic_max_min.cpp',
  'src/generated/./aarch64_float_arithmetic_div.cpp',
  'src/generated/./aarch64_float_arithmetic_add_sub.cpp',
  'src/generated/./aarch64_branch_unconditional_register.cpp',
  'src/generated/./aarch64_branch_unconditional_immediate.cpp',
  'src/generated/./aarch64_branch_unconditional_eret.cpp',
  'src/generated/./aarch64_branch_unconditional_dret.cpp',
  'src/generated/./aarch64_branch_conditional_test.cpp',
  'src/generated/./aarch64_branch_conditional_cond.cpp',
  'src/generated/./aarch64_branch_conditional_compare.cpp',
]


install_subdir(srcdir, install_dir: install_srcdir)
cxxflags = ['-Wno-unused-parameter']
instantiate_dep = declare_dependency(
  sources: srcfiles,
  dependencies: gen_dep,
  compile_args: cxxflags)

# needed to generate compile_commands.json when building this subproject standalone
dummy_lib = library('dummy', 'dummy.cpp', dependencies: gen_dep, install: false)

pkg = import('pkgconfig')
pkg.generate(
  name: meson.project_name(),
  description: 'offline aslp lifter library (template headers)',
)

instantiate_srcfiles = []
foreach f : srcfiles
  instantiate_srcfiles += [get_option('prefix') / install_srcdir / f]
endforeach

pkg.generate(
  name: meson.project_name() + '-instantiate',
  description: 'offline aslp lifter library (source files for explicit instantiation)',
  extra_cflags: cxxflags,
  variables: { 'srcdir': get_option('prefix') / install_srcdir, 'srcfiles': ';'.join(instantiate_srcfiles) },
)
